--- a/css/style.css
+++ b/css/style.css
@@ -226,6 +226,37 @@ header {
     font-weight: 400;
 }
 
+.action-buttons {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.favorite-btn {
+    display: flex;
+    align-items: center;
+    color: var(--text-color);
+}
+
+.favorite-btn .bx {
+    font-size: 21px;
+    background: var(--main-color);
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.favorite-btn .bx:hover {
+    background: var(--hover-color);
+}
+
+.favorite-btn.favorite .bx {
+    background: var(--hover-color);
+}
+
 .heading {
     display: flex;
     align-items: center;
@@ -559,6 +590,74 @@ header {
 .dropdown a:hover {
     background-color: var(--hover-color);
 }
+
+.comments-section {
+    margin-top: 20px;
+    padding: 10px;
+    border-top: 1px solid #ddd;
+}
+
+.comments-section h2 {
+    margin-bottom: 15px;
+}
+
+.comments-display {
+    margin-bottom: 20px;
+}
+
+.comment-form textarea {
+    width: 100%;
+    height: 100px;
+    margin-bottom: 10px;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    resize: none;
+}
+
+.comment-form button {
+    padding: 10px 20px;
+    background-color: #5a5a5a;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.comment-form button:hover {
+    background-color: #444;
+}
+
+
+
+.comment {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.comment-avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 10px;
+    
+}
+
+.nav .user .user-img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+
+.comment p {
+    margin: 0;
+    margin-bottom: 10px;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
 
 
 @media (max-width:1170px) {
