--- a/css/style.css
+++ b/css/style.css
@@ -628,7 +628,12 @@ header {
     background-color: #444;
 }
 
-
+.comment {
+    margin-bottom: 10px;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
 
 .comment {
     display: flex;
@@ -641,7 +646,6 @@ header {
     height: 40px;
     border-radius: 50%;
     margin-right: 10px;
-    
 }
 
 .nav .user .user-img {
@@ -652,10 +656,6 @@ header {
 
 .comment p {
     margin: 0;
-    margin-bottom: 10px;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
 }
 
 
